# LLM-W

./: .dockerignore  .env.example  .gitattributes  .gitignore  BENCHMARKS.md  CITATION.cff  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  EVAL.md  LICENSE  PLAN.md  README.md  SPEC.md  docker-compose.yml
.beads/: metadata.json
.claude/: README.md
.mulch/: mulch.config.yaml
.mulch/expertise/: architecture.jsonl  backend.jsonl  frontend.jsonl  training.jsonl
.overstory/: config.yaml  groups.json
.seeds/: config.yaml  issues.jsonl
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_bench_run_metrics.py  0003_eval_schema.py
backend/app/: main.py
backend/app/adapters/: __init__.py  base.py  causal_lm.py
backend/app/api/routes/: artifacts.py  configs.py  datasets.py  eval.py  health.py  models.py  projects.py  rubrics.py  runs.py  settings.py  storage.py  suggestions.py
backend/app/api/websocket/: __init__.py  handler.py  stream.py
backend/app/cli/: __init__.py  eval_replay.py
backend/app/core/: config.py  database.py  events.py  exceptions.py
backend/app/models/: __init__.py  activation_snapshot.py  artifact.py  config_version.py  dataset_profile.py  decision_log.py  eval_call.py  eval_case.py  eval_run.py  metric_point.py  model_profile.py  project.py  rubric.py  rubric_version.py  run.py  run_stage.py  storage_record.py  suggestion.py
backend/app/schemas/: __init__.py  artifact.py  common.py  config_version.py  dataset.py  eval.py  health.py  metric.py  model.py  project.py  rubric.py  run.py  settings.py  storage.py  suggestion.py  websocket.py  workbench_config.py
backend/app/services/: ai_recommender.py  config_service.py  config_validator.py  dataset_service.py  eval_runner.py  introspection.py  model_service.py  orchestrator.py  project_service.py  rule_engine.py  run_service.py  settings_service.py  storage_manager.py  suggestion_service.py  trainer.py  training_dispatcher.py  watchdog.py
backend/app/services/cloud/: __init__.py  modal_adapter.py
backend/app/services/eval/: __init__.py  chainpoll.py  geval.py  judge.py  openai_judge.py  replay.py  rubric_loader.py  tier1.py
backend/llm_workbench_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_calibration_sourcing.py  test_chainpoll_judge.py  test_configs.py  test_eval_calls_append_only.py  test_eval_routes.py  test_eval_runner.py  test_eval_schemas.py  test_eval_ws.py  test_geval_judge.py  test_health.py  test_judge_provider.py  test_openai_judge.py  test_projects.py  test_replay_eval_call.py  test_rubric_loader.py  test_rubric_schema.py  test_rubric_set_loader.py  test_rubric_set_v1.py  test_settings.py  test_tier1_registry.py  test_trainer_accelerate.py  test_trainer_rank_aware.py  test_watchdog_checkpoint_recovery.py  test_websocket_envelope.py
configs/accelerate/: README.md  deepspeed_zero2_2gpu.yaml  fsdp_2gpu.yaml  single_gpu.yaml
configs/bench/: eval_split.hash  eval_split.jsonl  judge_sanity_prompts.hash  judge_sanity_prompts.jsonl  qwen15b-lora.yaml
docs/: architecture.md  cloud-gpu-research.md  references.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
rubrics/: faithfulness.yaml  hallucination.yaml  instruction_following.yaml  safety.yaml
(+208 files in other folders)
