[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "llm-workbench-backend"
version = "1.0.0"
description = "LLM Fine-Tuning Workbench backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0.0",
    "deepdiff>=7.0.0",
    "psutil>=5.0.0",
    "watchdog>=4.0.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "datasets>=2.0.0",
    "bitsandbytes>=0.43.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",  # dynamically typed Any
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"alembic/*" = ["ANN", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
